--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-svg": "^16.1.34",
     "redux": "^5.0.1",
     "redux-logger": "^3.0.6",
+    "redux-thunk": "^3.1.0",
     "sass": "^1.72.0",
     "styled-components": "^6.1.8",
     "web-vitals": "^2.1.4"
