--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
+    "react-spinners": "^0.13.8",
     "react-svg": "^16.1.34",
     "redux": "^5.0.1",
     "redux-logger": "^3.0.6",
